--- a/backend/.env
+++ b/backend/.env
@@ -8,6 +8,8 @@ CLOUDINARY_CLOUD_NAME=dodnwbpqj
 CLOUDINARY_API=764315262847241
 CLOUDINARY_API_SECRET=mT6Aa8T6p_WqoFzD3_cAs9IrYT0
 
+USER_EMAIL=official.clickride@gmail.com
+APP_PASSWORD=dbsuffsfoclqyasi
 
 
-mongodb+srv://sauravrajputhero585:b43b6b82@cluster0.memll.mongodb.net/clickrideDB?retryWrites=true&w=majority&appName=Cluster0
+#mongodb+srv://sauravrajputhero585:b43b6b82@cluster0.memll.mongodb.net/clickrideDB?retryWrites=true&w=majority&appName=Cluster0
