--- a/backend/.env
+++ b/backend/.env
@@ -2,7 +2,7 @@ MONGODB_URI=mongodb+srv://sauravrajputhero585:kP5t735UaMUD23wD@cluster0.u4vpz.mo
 PORT=5001
 
 JWT_SECRET=mykey
-NODE_ENV=development
+NODE_ENV=production
 
 CLOUDINARY_CLOUD_NAME=dodnwbpqj
 CLOUDINARY_API=764315262847241
