--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,8 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.2",
-    "nodemailer": "^6.9.16"
+    "nodemailer": "^6.9.16",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
