--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,16 +12,21 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@hookform/resolvers": "^3.10.0",
     "@material-tailwind/react": "^2.1.10",
     "axios": "^1.7.9",
     "clickride": "file:..",
     "lucide-react": "^0.469.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
+    "react-image-gallery": "^1.3.0",
     "react-router-dom": "^7.1.1",
+    "swiper": "^11.2.2",
     "tailwind-scrollbar-hide": "^2.0.0",
     "tailwindcss-textshadow": "^2.1.3",
+    "yup": "^1.6.1",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
