--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,12 +16,16 @@
     "@material-tailwind/react": "^2.1.10",
     "axios": "^1.7.9",
     "clickride": "file:..",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.469.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
     "react-image-gallery": "^1.3.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.1.1",
     "swiper": "^11.2.2",
     "tailwind-scrollbar-hide": "^2.0.0",
