--- a/backend/.env
+++ b/backend/.env
@@ -10,6 +10,9 @@ CLOUDINARY_API_SECRET=mT6Aa8T6p_WqoFzD3_cAs9IrYT0
 USER_EMAIL=official.clickride@gmail.com
 APP_PASSWORD=dbsuffsfoclqyasi
 
+RAZORPAY_KEY_ID=rzp_test_sskL3WUl1AlUEE
+RAZORPAY_KEY_SECRET=thbuuKqzs8nOKAonVYjRGrxY
+
 NODE_ENV=development
 
 #mongodb+srv://sauravrajputhero585:b43b6b82@cluster0.memll.mongodb.net/clickrideDB?retryWrites=true&w=majority&appName=Cluster0
