--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.16",
+    "razorpay": "^2.9.6",
     "recharts": "^2.15.1",
     "yup": "^1.6.1"
   },
